fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
+* {
+    box-sizing: border-box;
+  }
 body{
-    height: 100%;
-	padding: 0;
+   
 	margin: 0;
 
 }
 header {
-    top: 0;
-    left: 0;
-    height: 75px;
-    padding: 30px;
-    background: black;
+    background-color: whitesmoke;
     text-align: center;
-    position: relative;
+    padding: 20px;
+    height: 160px;
 
 }
 .profile {
@@ -19,6 +18,7 @@ header {
     float: left;
     width: auto;
     height: 150px;
+    clear: both;
   }
 footer{
     position: fixed;
@@ -29,4 +29,8 @@ footer{
     color: black;
     text-align: center;
     margin: 5px;
+}
+.content{
+    width: 100%;
+    margin-right: 120px;
 }
